inputに最小値を設定

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="control-panel">
         <img src="./images/approxPi.svg" alt="" srcset="">
         <label for="lenInput">針の長さ L</label>
-        <input id="lenInput" type="number" value="1.0" step="0.1">
+        <input id="lenInput" type="number" value="1.0" min="0.1" step="0.1">
 
         <label for="spaceInput">線間隔 d</label>
-        <input id="spaceInput" type="number" value="1.0" step="0.1">
+        <input id="spaceInput" type="number" value="1.0" min="0.1" step="0.1">
 
         <label for="numInput">針の本数 N</label>
-        <input id="numInput" type="number" value="50" step="10">
+        <input id="numInput" type="number" value="50" min="1" step="10">
 
         <label for="spreadInput">投げる範囲 ±R</label>
-        <input id="spreadInput" type="number" value="5" step="1">
+        <input id="spreadInput" type="number" value="5" min="1" step="1">
 
 
         <div>
